# rust-botw

./: .gitignore  Breath of the Wild Characters.txt  Breath of the Wild Dog Treasures.txt  Breath of the Wild Items.txt  Breath of the Wild Locations.txt  Breath of the Wild Map Locations for Completion Raw.txt  Breath of the Wild Quests.txt  Breath of the Wild Shrines.txt  Cargo.toml
src/: lib.rs  main.rs  parse_one_time.rs
src/model_1/: character.rs  game_record.rs  item.rs  item_full_ref.rs  location.rs  mod.rs  model.rs  model_enum.rs  model_full_ref.rs  model_ref_lifetime.rs  quest.rs  shell.rs  shrine.rs
src/model_2/: controller.rs  game_record.rs  mod.rs  model.rs  parse.rs  runtime.rs  shell.rs
src/model_3/: command.rs  game_record.rs  mod.rs  model.rs  parse.rs  runtime.rs  shell.rs  sim.rs
src/timed/: game.rs  mod.rs  parse.rs
