[package]
name = "botw"
version = "0.1.0"
authors = ["david"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
serde = { version = "1.0.104", features = ["derive"] }
itertools = "0.9.0"
strum = "0.19.2"
strum_macros = "0.19"



