[package]
name = "botw"
version = "0.1.0"
authors = ["david"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util-rust = { path = "../util-rust" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
itertools = "0.9.0"
strum = "0.19.2"
strum_macros = "0.19"
rand = "0.8.0"




